syntax = "proto3";

package account;

option java_package = "com.bakery.account.proto";
option java_multiple_files = true;

service UsersSettingService {
  rpc CreateUser(UserSettingRequest) returns (UserSettingResponse);
}

message UserSettingRequest {
  string user_name = 1;
  string role_name = 2;
}
message UserSettingResponse {
  message Data {
    bool success = 1;
  }
  bool success = 1;
  oneof response {
    Data data = 2;
  }
}